fix text alignment issue in profile

--- a/docs/Portfolio/index.css
+++ b/docs/Portfolio/index.css
@@ -45,6 +45,7 @@ body{
     font-weight: 500;
     font-family: "Outfit", sans-serif;
     line-height: 40px;
+    text-align: center;
 }
 
 .prof{
@@ -52,6 +53,7 @@ body{
     font-family: "Outfit", sans-serif;
     font-weight: 500;
     line-height: 32px;
+    text-align: center;
     background: linear-gradient(to right, #A478E8,#516CF7);
     background-clip: text;
     color: transparent;
